# eso-unpack

./: CMakeLists.txt  ctags.conf  grep-textures.sh  ver-unpack.sh  ver-zip.sh
src/: esodata.h  esounpack.cpp  fileio.h  lookup2.c
